# LibraryManagerQt

./: .gitignore  CMakeLists.txt  README.md
src/: AppConfig.cpp  AppConfig.h  main.cpp
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Admin.h  Book.h  Loan.h  Message.h  Reader.h  Reservation.h
src/repos/: AdminRepository.cpp  AdminRepository.h  BookRepository.cpp  BookRepository.h  LoanRepository.cpp  LoanRepository.h  MessageRepository.cpp  MessageRepository.h  ReaderRepository.cpp  ReaderRepository.h  ReservationRepository.cpp  ReservationRepository.h
src/services/: AuthService.cpp  AuthService.h  LibraryService.cpp  LibraryService.h
src/ui/: AdminMainWindow.cpp  AdminMainWindow.h  AdminMainWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  ReaderMainWindow.cpp  ReaderMainWindow.h  ReaderMainWindow.ui
